# pricescraper-opg

./: .dockerignore  .gitignore  ANALYZER_README.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  api.py  app.py  config.py  database.py  deploy.sh  docker-compose.yml  fly_test.toml  main.py  models.py  price-scraper  price-scraper.json  price_calculator.py  price_scraper_dump.sql  pyproject.toml  requirements.txt  sample_configurations.json  scraper.py  start.sh  test_analyzer.py
.claude/skills/config-steps-extraction/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 6d162183930c_add_settings_table.py  bf6097f4f1a0_add_timestamps_to_settings_table.py
app/: main.py  manage_configs.py
app/constants/: selectors.py
app/core/: config.py  settings.py
app/database/: database.py
app/models/: models.py
app/routes/: analyzer_routes.py  api.py  config_management.py  country_config.py  domain_config.py  package_config.py  price_calculation.py  settings.py  version_management.py  web.py
app/schemas/: calculate.py  config.py  country.py  package.py  version.py
app/services/: config_analyzer.py  config_analyzer_enhanced.py  config_manager.py  crud.py  migrate_configs.py  price_calculator.py  price_calculator_refactored.py  scraper.py
app/utils/: pattern_matcher.py  selector_optimizer.py
scripts/: init_db.sh
static/css/: input.css  output.css
templates/: base.html  config.html  config_analyzer.html  config_docs.html  index.html  settings.html  step_editor.html
(+8 files in other folders)
