[project]
name = "pricescraper-opg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "2captcha-python>=1.5.1",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "forex-python>=1.9.2",
    "jinja2>=3.1.6",
    "playwright>=1.55.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
]
